@@ -49,7 +49,8 @@ namespace Gendarme.Rules.Smells {
 		{
 			return instruction.OpCode.FlowControl == FlowControl.Call ||
 				instruction.OpCode.FlowControl == FlowControl.Branch ||
-				instruction.OpCode.FlowControl == FlowControl.Cond_Branch;
+				instruction.OpCode.FlowControl == FlowControl.Cond_Branch ||
+				instruction.OpCode.Code == Code.Stfld;
 		}
 
 		private void CreateExpressionAndAddToExpressionContainer ()
